==> frank26080115/robots/Roach/libraries/nRF52RcRadio/nRF52RcRadio.cpp <==
#include "nRF52RcRadio.h"
#include "nrf_radio.h"
#include "nrf_ppi.h"
#include "nrf_egu.h"
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

void nRF52RcRadio::var_reset(void)
{
    _connected = false;
    _tx_interval = NRFRR_TX_INTERV_DEF;
    _session_id = 0;
    _seq_num = 0;
    _seq_num_prev = 0;
    _statemachine = 0;
    _statemachine_next = 0;
    #ifdef NRFRR_DEBUG_RX_ERRSTATS
    memset(_stat_rx_errs, 0, 4*12);
    #endif
    _last_rx_time = 0;
    _last_tx_time = 0;
    _last_hop_time = 0;
    _tx_replyreq_tmr = 0;
    _reply_request_rate = 200;
    _reply_request_latch = false;
    _cur_chan = 0;
    _last_chan = -1;
    _text_send_timer = 0;
    rx_flag = false;
    txt_flag = false;
}

void nRF52RcRadio::begin(int fem_tx, int fem_rx)
{
    instance = (nRF52RcRadio*)this;

    #ifdef NRFRR_DEBUG_PINS
    pinMode     (NRFRR_DEBUG_PIN_TX, OUTPUT);
    digitalWrite(NRFRR_DEBUG_PIN_TX, _dbgpin_tx = LOW);
    pinMode     (NRFRR_DEBUG_PIN_RX, OUTPUT);
    digitalWrite(NRFRR_DEBUG_PIN_RX, _dbgpin_rx = LOW);
    pinMode     (NRFRR_DEBUG_PIN_CH, OUTPUT);
    digitalWrite(NRFRR_DEBUG_PIN_CH, _dbgpin_ch = LOW);
    #endif

    _fem_tx = fem_tx;
    _fem_rx = fem_rx;
    if (_fem_tx >= 0) {
        pinMode     (_fem_tx, OUTPUT);
        digitalWrite(_fem_tx, LOW);
    }
    if (_fem_rx >= 0) {
        pinMode     (_fem_rx, OUTPUT);
        digitalWrite(_fem_rx, LOW);
    }

    if (hw_inited == false) {
        init_hw();
        hw_inited = true;
    }
}

void nRF52RcRadio::gen_hop_table(void)
{
    // generate hop table, fill table with an entry if the bit of the map bitmask is set
    _hop_table = (uint8_t*)malloc((sizeof(freq_lookup) / 2) + 1);
    int i, j;
    for (i = 0, j = 0; i < (sizeof(freq_lookup) / 2); i++)
    {
        if ((_chan_map & (1 << i)) != 0) {
            _hop_table[j] = i + 1;
            _hop_table[j + 1] = 0;
            j++;
            _hop_tbl_len = j;
        }
    }

    if (_salt != 0)
    {
        nrfrr_rand2seed(_salt);
        // shuffle the table according to our salt
        // this prevents jamming by following a known hop sequence
        for (i = 0; i < _hop_tbl_len; i++)
        {
            j = nrfrr_rand2() % _hop_tbl_len;
            uint8_t t = _hop_table[j];
            _hop_table[j] = _hop_table[i];
            _hop_table[i] = t;
        }
    }
    #ifdef NRFRR_DEBUG_HOPTABLE
    Serial.printf("Hop Table: ");
    for (i = 0; i < _hop_tbl_len; i++) {
        Serial.printf("%d  ", _hop_table[i]);
    }
    #endif
    _cur_chan %= _hop_tbl_len;
}

void nRF52RcRadio::setChanMap(uint32_t x)
{
    uint32_t i, m;
    for (i = 0, m = 0; i < (sizeof(freq_lookup) / 2); i++)
    {
        m |= 1 << i;
    }
    _chan_map = x & m;
    _chan_map = _chan_map == 0 ? NRFRR_CHAN_MAP_DEFAULT : _chan_map;
    gen_hop_table();
}

void nRF52RcRadio::setTxInterval(uint16_t x)
{
    _tx_interval = x > NRFRR_TX_INTERV_MAX ? NRFRR_TX_INTERV_MAX : (x < NRFRR_TX_INTERV_MIN ? NRFRR_TX_INTERV_MIN : x);
}

void nRF52RcRadio::send(uint8_t* data)
{
    memcpy(tx_buffer, data, NRFRR_PAYLOAD_SIZE);
}

void nRF52RcRadio::next_chan(void)
{
    _cur_chan++;
    _cur_chan %= _hop_tbl_len;

    if (_is_pairing) {
        _cur_chan = 0;
    }

    uint8_t nchan = _hop_table[_cur_chan] - 1;
    //if (nchan != _last_chan) // prevent wasting time changing to the same channel
    {
        uint16_t freq = freq_lookup[nchan];

        #ifdef NRFRR_DEBUG_HOP
        Serial.printf("HOP %u %u %u %u\r\n", millis(), _cur_chan, nchan, ((freq & 0x100) != 0) ? (2360 + (freq & 0xFF)) : (2400 + freq));
        #endif

        NRF_RADIO->FREQUENCY = freq;

        #ifdef NRFRR_DEBUG_PINS
        digitalWrite(NRFRR_DEBUG_PIN_CH, _dbgpin_ch = (_dbgpin_ch == LOW ? HIGH : LOW));
        #endif

        _last_chan = nchan;
    }

    _last_hop_time = millis();
}

void nRF52RcRadio::gen_header(void)
{
    uint32_t now = millis();

    nrfrr_pkt_t* ptr = (nrfrr_pkt_t*)frame_buffer;

    ptr->s0 = 0;
    ptr->s1 = 0;
    ptr->len = sizeof(nrfrr_pkt_t);

    uint32_t r =
        #ifdef NRFRR_FINGER_QUOTES_RANDOMNESS
            nrfrr_rand()
            // TODO: check speed of RNG
        #else
            0
        #endif
        ;
    // the random number is used to make the MAC addresses random each time just in case it's a match for a real device
    // we don't want that device to actually be confused
    // it also makes the packet look like it's encrypted
    // it is not...
    // if the attacker reads this source code, the random number is pretty much useless
    #ifdef NRFRR_FINGER_QUOTES_RANDOMNESS
    ptr->rand       = r;
    #endif
    ptr->uid        = _uid         ^ r;
    ptr->session    = _session_id  ^ r;
    ptr->chan_hint  = _cur_chan    ^ r;
    ptr->seq_num    = _seq_num     ^ r;
    #ifdef NRFRR_ADAPTIVE_INTERVAL
    ptr->interval   = _tx_interval ^ r;
    #endif
    ptr->flags      = 0;
    #ifdef NRFRR_BIDIRECTIONAL
    ptr->ack_seq    = _reply_seq;
    #endif

    if (_is_pairing) {
        ptr->flags |= (1 << NRFRR_FLAG_PAIRING);
    }

    #ifdef NRFRR_BIDIRECTIONAL
    if (_is_tx == false)
    {
        ptr->flags |= (1 << NRFRR_FLAG_REPLY);
    }
    else
    {
        if ((now - _tx_replyreq_tmr) >= _reply_request_rate && _reply_request_rate != 0) {
            _reply_request_latch = true;
            _tx_replyreq_tmr = now;
        }
        if (_reply_request_latch) {
            ptr->flags |= (1 << NRFRR_FLAG_REPLYREQUEST);
        }
    }
    #endif

    ptr->flags ^= r;
}

void nRF52RcRadio::task(void)
{
    uint32_t now;

    while (state_machine_run(now = millis(), false)) {
        yield();
    }

    if ((now - stats_rate.timestamp) >= 1000)
    {
        stats_tmp.loss = stats_tmp.seq_miss > stats_tmp.rx_miss ? stats_tmp.seq_miss : stats_tmp.rx_miss; // lost sequence numbers won't update if no packets are received, so take the timeout counts instead
        stats_tmp.drate = _is_tx ? stats_tmp.tx : stats_tmp.rx;
        memcpy(&stats_rate, &stats_tmp, sizeof(radiostats_t));
        uint32_t* src_ptr = (uint32_t*)&stats_tmp;
        uint32_t* dst_ptr = (uint32_t*)&stats_sum;
        for (int i = 2; i < sizeof(radiostats_t); i++) {
            dst_ptr[i] += src_ptr[i];
        }
        memset(&stats_tmp, 0, sizeof(radiostats_t));
        stats_rate.timestamp = now;
    }
}

int nRF52RcRadio::available(void)
{
    task();
    return rx_flag ? NRFRR_PAYLOAD_SIZE : 0;
}

int nRF52RcRadio::read(uint8_t* data)
{
    task();
    if (rx_flag) // has data
    {
        if (data != NULL) {
            // copy to user buffer if available
            memcpy(data, rx_buffer, NRFRR_PAYLOAD_SIZE);
        }
        rx_flag = false; // mark as read
        return NRFRR_PAYLOAD_SIZE; // report success
    }
    return -1; // report no data
}

int nRF52RcRadio::textAvail(void)
{
    task();
    return txt_flag ? sizeof(radio_binpkt_t) : 0;
}

int nRF52RcRadio::textRead(const char* buf, bool clr)
{
    task();
    if (txt_flag) // has data
    {
        radio_binpkt_t* pkt = (radio_binpkt_t*)txt_rx_buffer;
        if (pkt->typecode == ROACHCMD_TEXT)
        {
            int slen = strlen((const char*)pkt->data);
            if (buf != NULL) {
                // copy to user buffer if available
                memcpy((char*)buf, pkt->data, slen + 1);
            }
            if (clr) {
                txt_flag = false; // mark as read
            }
            return slen; // report success
        }
        return -2; // report not text
    }
    return -1; // report no data
}

void nRF52RcRadio::textSend(const char* buf)
{
    radio_binpkt_t pkt;
    pkt.typecode = ROACHCMD_TEXT;
    pkt.addr = 0;
    pkt.len = strlen(buf) + 1;
    strncpy((char*)pkt.data, buf, NRFRR_PAYLOAD_SIZE2 - 1);
    textSendBin(&pkt);
}
