==> frank26080115/robots/Roach/libraries/Esp32RcRadio/Esp32RcRadio.cpp <==
#include "Esp32RcRadio.h"
#include <esp_wifi.h>
#include <esp_wifi_types.h>
#include <esp_system.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define E32RCRAD_FRAME_CONTROL_ACTION 0x00D0
#define E32RCRAD_FRAME_CONTROL_PROBE  0x0040
#define E32RCRAD_FRAME_CONTROL_BA     0x0094 // not allowed
#define E32RCRAD_FRAME_CONTROL        E32RCRAD_FRAME_CONTROL_ACTION

void Esp32RcRadio::var_reset(void)
{
    _tx_interval = E32RCRAD_TX_INTERV_DEF;
    _session_id = 0;
    _seq_num = 0;
    _seq_num_prev = 0;
    _statemachine = 0;
    _stat_tmr = 0;
    _stat_tx_cnt = 0;
    _stat_rx_cnt = 0;
    _stat_txt_cnt = 0;
    _stat_drate = 0;
    _stat_rx_lost = 0;
    _stat_loss_rate = 0;
    #ifdef E32RCRAD_DEBUG_RX_ERRSTATS
    memset(_stat_rx_errs, 0, 4*12);
    #endif
    _stat_rx_total = 0;
    _stat_rx_good = 0;
    _last_rx_time = 0;
    _last_tx_time = 0;
    _last_hop_time = 0;
    _last_rx_time_4hop = 0;
    _sync_hop_cnt = 0;
    _tx_replyreq_tmr = 0;
    _reply_request_rate = 1000;
    _reply_request_latch = false;
    _cur_chan = 0;
    _last_chan = -1;
    _text_send_timer = 0;
    _stat_rx_spent_time = 0;
    rx_flag = false;
    txt_flag = false;
}

void Esp32RcRadio::begin(uint16_t chan_map, uint32_t uid, uint32_t salt)
{
    instance = (Esp32RcRadio*)this;

    #ifdef E32RCRAD_DEBUG_PINS
    pinMode     (E32RCRAD_DEBUG_PIN_TX, OUTPUT);
    digitalWrite(E32RCRAD_DEBUG_PIN_TX, _dbgpin_tx = LOW);
    pinMode     (E32RCRAD_DEBUG_PIN_RX, OUTPUT);
    digitalWrite(E32RCRAD_DEBUG_PIN_RX, _dbgpin_rx = LOW);
    pinMode     (E32RCRAD_DEBUG_PIN_CH, OUTPUT);
    digitalWrite(E32RCRAD_DEBUG_PIN_CH, _dbgpin_ch = LOW);
    #endif

    var_reset();
    _uid = uid;
    _salt = salt;

    set_chan_map(chan_map);

    if (has_wifi_init == false) // only start once
    {
        has_wifi_init = true;
        //esp_netif_init();
        //esp_event_loop_create_default();
        //esp_netif_create_default_wifi_ap();
        wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
        esp_wifi_init(&cfg);
        esp_wifi_set_mode(WIFI_MODE_AP);
        wifi_config_t ap_config = {
            .ap = {
                .ssid = {0},
                .password = {0},
                .ssid_len = 0,
                .channel = _hop_table[_cur_chan % _hop_tbl_len],
                .authmode = WIFI_AUTH_WPA2_PSK,
                .ssid_hidden = 1,
                .max_connection = 4,
                .beacon_interval = 60000
            }
        };

        esp_wifi_set_config(WIFI_IF_AP, &ap_config);
        #ifdef E32RCRAD_FORCE_PHY_RATE
        esp_wifi_config_80211_tx_rate(WIFI_IF_AP, WIFI_PHY_RATE_54M); // sets PHY rate
        #endif
        #ifdef E32RCRAD_FORCE_BANDWIDTH
        esp_wifi_set_bandwidth(WIFI_IF_AP, WIFI_BW_HT20);
        #endif
        esp_wifi_start();
        esp_wifi_set_ps(WIFI_PS_NONE);
        #ifdef E32RCRAD_FORCE_RFPOWER
        esp_wifi_set_max_tx_power(84);
        #endif
        prep_listener();
    }
    else
    {
        next_chan();
    }

    if (_is_tx == false)
    {
        start_listener();
    }
    else
    {
        while (_session_id == 0) {
            _session_id = esp_random(); // this needs to happen after wifi init to get the real randomness from RF
        }
        srand(_session_id);
    }
}

void Esp32RcRadio::gen_hop_table(void)
{
    // generate hop table, fill table with an entry if the bit of the map bitmask is set
    int i, j;
    for (i = 0, j = 0; i < 14; i++)
    {
        if ((_chan_map & (1 << i)) != 0) {
            _hop_table[j] = i + 1;
            _hop_table[j + 1] = 0;
            j++;
            _hop_tbl_len = j;
        }
    }

    if (_salt != 0)
    {
        uint32_t tmp32[4];
        tmp32[0] = _uid;
        tmp32[1] = _salt;
        tmp32[2] = e32rcrad_getCheckSum(0, (uint8_t*)tmp32, 8);
        tmp32[3] = e32rcrad_getCheckSum(0, (uint8_t*)&(tmp32[1]), 8);
        uint8_t* tmp8 = (uint8_t*)tmp32;

        // shuffle the table according to our salt
        // this prevents jamming by following a known hop sequence
        for (i = 0; i < _hop_tbl_len; i++)
        {
            j = tmp8[i] % _hop_tbl_len;
            uint8_t t = _hop_table[j];
            _hop_table[j] = _hop_table[i];
            _hop_table[i] = t;
        }
    }
    #ifdef E32RCRAD_DEBUG_HOPTABLE
    Serial.printf("Hop Table: ");
    for (i = 0; i < _hop_tbl_len; i++) {
        Serial.printf("%d  ", _hop_table[i]);
    }
    #endif
    _cur_chan %= _hop_tbl_len;
}

void Esp32RcRadio::set_chan_map(uint16_t x)
{
    _single_chan_mode = (x & 0x8000) != 0;
    _chan_map = x & 0x3FFF;
    _chan_map = _chan_map == 0 ? E32RCRAD_CHAN_MAP_DEFAULT : _chan_map;
    gen_hop_table();
}

void Esp32RcRadio::set_tx_interval(uint16_t x)
{
    _tx_interval = x > E32RCRAD_TX_INTERV_MAX ? E32RCRAD_TX_INTERV_MAX : (x < E32RCRAD_TX_INTERV_MIN ? E32RCRAD_TX_INTERV_MIN : x);
}

void Esp32RcRadio::send(uint8_t* data, bool immediate)
{
    memcpy(tx_buffer, data, E32RCRAD_PAYLOAD_SIZE);

    if (immediate) {
        tx();
    }
}

void Esp32RcRadio::next_chan(void)
{
    _cur_chan++;
    _cur_chan %= _hop_tbl_len;
    uint8_t nchan = _hop_table[_cur_chan];
    //if (nchan != _last_chan) // prevent wasting time changing to the same channel
    {
        #ifdef E32RCRAD_DEBUG_HOP
        Serial.printf("HOP %u %u %u\r\n", millis(), _cur_chan, nchan);
        #endif

        if (_is_tx == false) {
            esp_wifi_set_promiscuous(false);
        }

        // I'm like 99% sure we don't need to actually retry these calls
        int retries;
        for (retries = 100; retries > 0; retries--)
        {
            if (esp_wifi_set_channel(nchan, WIFI_SECOND_CHAN_NONE) == ESP_OK)
            {
                uint8_t x;
                wifi_second_chan_t x2;
                if (esp_wifi_get_channel(&x, &x2) == ESP_OK) {
                    if (x == nchan) {
                        break;
                    }
                }
            }
        }

        #ifdef E32RCRAD_DEBUG_PINS
        digitalWrite(E32RCRAD_DEBUG_PIN_CH, _dbgpin_ch = (_dbgpin_ch == LOW ? HIGH : LOW));
        #endif

        if (_is_tx == false) {
            start_listener();
        }
        _last_chan = nchan;
    }

    _last_hop_time = millis();
}

void Esp32RcRadio::gen_header(void)
{
    uint32_t now = millis();

    e32rcrad_pkt_t* ptr = (e32rcrad_pkt_t*)frame_buffer;
    ptr->frame_ctrl = E32RCRAD_FRAME_CONTROL;
    ptr->duration = 0;

    uint32_t r =
        #ifdef E32RCRAD_FINGER_QUOTES_RANDOMNESS
            rand()
        #else
            0
        #endif
        ;
    // the random number is used to make the MAC addresses random each time just in case it's a match for a real device
    // we don't want that device to actually be confused
    // it also makes the packet look like it's encrypted
    // it is not...
    // if the attacker reads this source code, the random number is pretty much useless
    ptr->padding[0] = r;
    ptr->padding[1] = ~r;
    ptr->addrs[0]   = r;
    ptr->addrs[1]   = _uid         ^ r;
    ptr->addrs[2]   = _session_id  ^ r;
    ptr->chan_hint  = _cur_chan    ^ r;
    ptr->seq_num    = _seq_num     ^ r;
    #ifdef E32RCRAD_ADAPTIVE_INTERVAL
    ptr->interval   = _tx_interval ^ r;
    #endif
    ptr->flags      = 0;

    #ifdef E32RCRAD_BIDIRECTIONAL
    if (_is_tx == false)
    {
        ptr->flags |= (1 << E32RCRAD_FLAG_REPLY);
    }
    else
    {
        if ((now - _tx_replyreq_tmr) >= _reply_request_rate && _reply_request_rate != 0) {
            _reply_request_latch = true;
            _tx_replyreq_tmr = now;
        }
        if (_reply_request_latch) {
            ptr->flags |= (1 << E32RCRAD_FLAG_REPLYREQUEST);
        }
    }
    #endif

    ptr->flags ^= r;
}

void Esp32RcRadio::task(void)
{
    uint32_t now = millis();

    if (_is_tx == false)
    {
        if (_statemachine == E32RCRAD_SM_SENDING)
        {
            if ((now - _last_tx_time) >= E32RCRAD_TX_MIN_TIME)
            {
                _statemachine = E32RCRAD_SM_LISTENING;
            }
        }
        else if (_statemachine == E32RCRAD_SM_REPLYING)
        {
            //esp_wifi_set_promiscuous(false);
            if ((now - _last_rx_time) >= E32RCRAD_TX_MIN_TIME)
            {
                tx();
                // state will be set to sending
            }
        }
        else if (_statemachine == E32RCRAD_SM_LISTENING && (now - _last_rx_time_4hop) >= _tx_interval) // reply has been sent, can switch channels
        {
            _last_rx_time_4hop = now;
            if (_single_chan_mode == false) {
                next_chan(); // this should also restart the listening
            }
            _statemachine = E32RCRAD_SM_IDLE;
        }
        else if (_sync_hop_cnt > 0 && (now - _last_rx_time_4hop) >= _tx_interval)
        {
            // we do quick hops in attempts to quickly resynchronize with the transmitter
            _last_rx_time_4hop = now;
            _sync_hop_cnt--;
            if (_single_chan_mode == false) {
                next_chan();
            }
        }
        else if (_sync_hop_cnt <= 0 && (now - _last_hop_time) >= (_tx_interval <= 0 ? 100 : (_tx_interval * 3)))
        {
            // quick hops didn't work, so we've lost sync with transmitter, do slow hops now
            // this is so that we don't stay in a useless channel forever
            if (_single_chan_mode == false) {
                next_chan();
            }
        }

        // prevent statistics overflow
        if (_stat_rx_total > 1000 || _stat_rx_good > 1000) {
            _stat_rx_total /= 2;
            _stat_rx_good  /= 2;
        }
    }
    else // _is_tx == true
    {
        if (_statemachine == E32RCRAD_SM_SENDING)
        {
            #ifdef E32RCRAD_BIDIRECTIONAL
            if ((now - _last_tx_time) >= E32RCRAD_TX_MIN_TIME)
            {
                start_listener(); // start listening for a reply
                _statemachine = E32RCRAD_SM_LISTENING;
            }
            #else
            _statemachine = E32RCRAD_SM_LISTENING;
            #endif
        }
        else if (_statemachine == E32RCRAD_SM_LISTENING)
        {
            if ((now - _last_tx_time) >= (_tx_interval / 3))
            {
                _statemachine = E32RCRAD_SM_IDLE;
                if (_single_chan_mode == false)
                {
                    #ifdef E32RCRAD_BIDIRECTIONAL
                    esp_wifi_set_promiscuous(false);
                    #endif
                    next_chan();
                }
            }
        }
        else
        {
            if ((now - _last_tx_time) >= _tx_interval)
            {
                // send queued packet if enough time has passed
                tx();
                // _last_time will be set from inside
            }
        }
    }

    if ((now - _stat_tmr) >= 1000)
    {
        _stat_drate = _is_tx ? _stat_tx_cnt : _stat_rx_cnt;
        _stat_loss_rate = _stat_rx_lost;
        _stat_tx_cnt = 0;
        _stat_rx_cnt = 0;
        _stat_rx_lost = 0;
        _stat_tmr = now;

        // every second, if in single channel RX mode, assess if the data rate is poor, and switch channel if it is
        if (_is_tx == false && _single_chan_mode)
        {
            if (_stat_drate < ((1000 / 20) - 5)) {
                next_chan();
            }
        }
    }
}

int Esp32RcRadio::available(void)
{
    task();
    return rx_flag ? E32RCRAD_PAYLOAD_SIZE : 0;
}

int Esp32RcRadio::read(uint8_t* data)
{
    task();
    if (rx_flag) // has data
    {
        if (data != NULL) {
            // copy to user buffer if available
            memcpy(data, rx_buffer, E32RCRAD_PAYLOAD_SIZE);
        }
        rx_flag = false; // mark as read
        return E32RCRAD_PAYLOAD_SIZE; // report success
    }
    return -1; // report no data
}

int Esp32RcRadio::textAvail(void)
{
    task();
    return txt_flag ? E32RCRAD_PAYLOAD_SIZE : 0;
}

int Esp32RcRadio::textRead(char* buf)
{
    task();
    if (txt_flag) // has data
    {
        if (buf != NULL) {
            // copy to user buffer if available
            strncpy((char*)buf, (const char*)txt_rx_buffer, E32RCRAD_PAYLOAD_SIZE - 2);
        }
        txt_flag = false; // mark as read
        return E32RCRAD_PAYLOAD_SIZE; // report success
    }
    return -1; // report no data
}

void Esp32RcRadio::textSend(char* buf)
{
    strncpy((char*)txt_tx_buffer, (const char*)buf, E32RCRAD_PAYLOAD_SIZE - 2);
    _text_send_timer = _hop_tbl_len * E32RCRAD_TX_RETRANS_TXT; // makes sure the text is sent over all the channels a few times
    _seq_num++; // make sure the text is considered fresh
    if (_seq_num == 0) {
        // roll-over occured, start new session
        _session_id = esp_random();
        _seq_num++;
    }
}
